@@ -1,3 +1,4 @@
+ - Allow setting global parameters for Krylov solver
  - Fix handling of Constants in Python interface to avoid repeated JIT compilation
  - Allow simple specification of subdomains in Python without needing to subclass SubDomain
  - Add function homogenize() for simple creation of homogeneous BCs from given BCs
